[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/topdown-shooter/PNG/weapon_silencer.png" type="Texture" id=1]
[ext_resource path="res://assets/topdown-tanks-redux/PNG/Default size/shotLarge.png" type="Texture" id=2]
[ext_resource path="res://items/weapons/Gun.gd" type="Script" id=3]
[ext_resource path="res://items/weapons/Bullet.tscn" type="PackedScene" id=4]

[sub_resource type="Animation" id=1]
resource_name = "muzzle_flash"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("MuzzleFlash:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MuzzleFlash:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 26, 0 ), Vector2( 28, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MuzzleFlash:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.5, 1.2 ) ]
}

[node name="Gun" type="Node2D"]
script = ExtResource( 3 )
Bullet = ExtResource( 4 )

[node name="GunSprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="MuzzleFlash" type="Sprite" parent="."]
visible = false
position = Vector2( 27, 0 )
rotation = -1.5708
scale = Vector2( 0.75, 1.1 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
reset_on_save = false
anims/muzzle_flash = SubResource( 1 )

[node name="EndOfGun" type="Position2D" parent="."]
position = Vector2( 13, 0 )

[node name="GunDirection" type="Position2D" parent="."]
position = Vector2( 18, 0 )

[node name="ShotCooldown" type="Timer" parent="."]
wait_time = 0.7
one_shot = true
